add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
             <nav class="nav nav--stile-for-aside">
               <ul class="nav__list nav__list--flex-box">
                 <li class="nav__item nav__item--groop">
-                  <a class="nav__link" href="#">
+                  <a class="nav__link" href="#slider">
                     Галерея
                   </a>
                   <a class="nav__link" href="#events">
@@ -215,52 +215,54 @@
       </div>
 
       <div class="container">
-        <div class="slider slider--scroll main__slider">
-          <div class="slider__slides">
-            <input
-              type="radio"
-              name="r"
-              id="r1"
-              checked
-            >
-            <input type="radio" name="r" id="r2">
-            <input type="radio" name="r" id="r3">
-            <input type="radio" name="r" id="r4">
-            <div class="slider__slide s1">
-              <img src="images/slider-imgs/first-slider-img.png" alt="nature" class="slider__img">
+        <section id="slider">
+          <div
+            class="slider slider--scroll main__slider"
+          >
+            <div class="slider__slides">
+              <input
+                type="radio"
+                name="r"
+                id="r1"
+                checked
+              >
+              <input type="radio" name="r" id="r2">
+              <input type="radio" name="r" id="r3">
+              <input type="radio" name="r" id="r4">
+              <div class="slider__slide s1">
+                <img src="images/slider-imgs/first-slider-img.png" alt="nature" class="slider__img">
+              </div>
+              <div class="slider__slide">
+                <img src="images/slider-imgs/second-slider-img.png" alt="nature" class="slider__img">
+              </div>
+              <div class="slider__slide">
+                <img src="images/slider-imgs/therd-slider-img.png" alt="nature" class="slider__img">
+              </div>
+              <div class="slider__slide">
+                <img src="images/slider-imgs/fourth-slider-img.png" alt="nature" class="slider__img">
+              </div>
             </div>
-            <div class="slider__slide">
-              <img src="images/slider-imgs/second-slider-img.png" alt="nature" class="slider__img">
-            </div>
-            <div class="slider__slide">
-              <img src="images/slider-imgs/therd-slider-img.png" alt="nature" class="slider__img">
-            </div>
-            <div class="slider__slide">
-              <img src="images/slider-imgs/fourth-slider-img.png" alt="nature" class="slider__img">
+            <div class="slider__navigation">
+              <label for="r1" class="slider__bar slider__bar--active"></label>
+              <label for="r2" class="slider__bar"></label>
+              <label for="r3" class="slider__bar"></label>
+              <label for="r4" class="slider__bar slider__bar--tablet-display-none"></label>
             </div>
           </div>
-          <div class="slider__navigation">
-            <label for="r1" class="slider__bar slider__bar--active"></label>
-            <label for="r2" class="slider__bar"></label>
-            <label for="r3" class="slider__bar"></label>
-            <label for="r4" class="slider__bar slider__bar--tablet-display-none"></label>
-          </div>
-        </div>
-      </div>
 
-      <div class="container">
-        <div class="slider slider--grid">
-          <div class="slider__grid-picture1">
-            <img class="slider__grid-img" src="images/slider-imgs/slider-grid/img1.png" alt="nature">
+          <div class="slider slider--grid">
+            <div class="slider__grid-picture1">
+              <img class="slider__grid-img" src="images/slider-imgs/slider-grid/img1.png" alt="nature">
+            </div>
+            <div class="slider__grid-picture2">
+              <img class="slider__grid-img" src="images/slider-imgs/slider-grid/img2.png" alt="nature">
+            </div>
+            <div class="slider__grid-picture3">
+              <img  class="slider__grid-img" src="images/slider-imgs/slider-grid/img3.png" alt="nature">
+            </div>
+            <div class="slider__grid-picture4"><img  class="slider__grid-img" src="images/slider-imgs/slider-grid/img4.png" alt="nature"></div>
           </div>
-          <div class="slider__grid-picture2">
-            <img class="slider__grid-img" src="images/slider-imgs/slider-grid/img2.png" alt="nature">
-          </div>
-          <div class="slider__grid-picture3">
-            <img  class="slider__grid-img" src="images/slider-imgs/slider-grid/img3.png" alt="nature">
-          </div>
-          <div class="slider__grid-picture4"><img  class="slider__grid-img" src="images/slider-imgs/slider-grid/img4.png" alt="nature"></div>
-        </div>
+        </section>
       </div>
 
       <div class="subscription" id="subscription">
@@ -427,7 +429,7 @@
             <nav class="nav">
               <ul class="nav__list nav__list--flex">
                 <li class="nav__item">
-                  <a class="nav__link" href="#">
+                  <a class="nav__link" href="#slider">
                     Галерея
                   </a>
                 </li>
