fixed scroll, link, autocomplete

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
         </article>
       </section>
 
-      <section class="romantic">
+      <section id="romantic" class="romantic">
         <img
           srcset="./images/images/event_3-desktop.jpg  1024w,
             ./images/images/event_3.jpg 640w"
@@ -285,11 +285,28 @@
             <p class="contacts__text">
               Контакти:
             </p>
-
-            <p class="contacts__adress">вул. М. Грушевського, 6; Київ, 01001
-              </br>тел. +38 (044) <span class="contacts--nowrap">278-13-57</span>
-              </br>факс +38 (044) <span class="contacts--nowrap">278-13-57</span>
-              </br>e-mail: info@namu.kiev.ua</p>
+            <a
+              href="https://goo.gl/maps/op682XHSmBEYuNpn7"
+              class="contacts__adress"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            </br>
+            <span class="contacts__adress">тел. </span>
+            <a href="tel: +38 (044) 278-13-57" class="contacts__adress">
+               +38 (044) <span class="contacts--nowrap">278-13-57</span>
+            </a>
+            </br>
+            <span class="contacts__adress">факс</span>
+            <a href="tel: +38 (044) 278-13-57" class="contacts__adress">
+              +38 (044) <span class="contacts--nowrap">278-13-57</span>
+            </a>
+            </br>
+            <span class="contacts__adress">e-mail:</span>
+            <a href="mailto: info@namu.kiev.ua" class="contacts__adress">
+              info@namu.kiev.ua
+            </a>
           </div>
 
           <a href="#header" class="contacts__arrow">
