--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,293 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,regular,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="shortcut icon" href="images/favicon.svg">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="page__section header">
+      <div class="header__top top-header">
+        <div class="top-header__icons">
+          <a href="#menu" class="top-header__icon"></a>
+          <div class="top-header__logo">
+            <img src="./images/icon/logo.svg" alt="Logo">
+          </div>
+        </div>
+      </div>
+      <div class="header__content content-header">
+        <div class="content-header__image">
+          <img src="./images/header/main-photo.jpg" alt="Image">
+          <a href="#" class="content-header__logo-big">
+            <img src="./images/icon/logo.svg" alt="Logo">
+          </a>
+        </div>
+        <div class="content-header__body">
+          <h1 class="content-header__title title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#current-events" class="content-header__tickets">
+            <div class="content-header__link">КВИТКИ</div>
+            <div class="content-header__arrow"></div>
+          </a>
+          <a href="#current-events" class="content-header__events">ПОДІЇ</a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__navigation">
+
+          <div class="menu__opened menu-opened">
+            <a href="#" class="menu__icon icon--cross"></a>
+            <nav class="menu-opened__nav nav">
+              <ul class="nav__list">
+                <div class="nav__list--part">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#current-events" class="nav__link">Виставки та <br> події</a>
+                  </li>
+                </div>
+                <div class="nav__list--part">
+                  <li class="nav__item">
+                    <a href="#subscribe" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">Контакти</a>
+                  </li>
+                </div>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="menu__hours menu-hours">
+          <div class="menu-hours__title">Графік роботи</div>
+          <div class="menu-hours__hours hours">
+            <div class="hours__opened">
+              <span>12:00 — 20:00 </span>середа <br> <span>12:00 — 20:00</span> четвер <br> <span>12:00 — 20:00</span> п’ятниця <br> <span>11:00 — 19:00</span> субота <br> <span>11:00 — 19:00</span> неділя
+            </div>
+            <div class="hours__closed">
+              <span>Вихідні</span>: понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main-page">
+      <div class="main-page__content">
+        <section class="page__section current-events" id="current-events">
+          <h2 class="current-events__title title">Актуальні події</h2>
+
+          <div class="current-events__box box-current-events">
+            <div class="box-current-events__item item-current-events">
+              <div class="item-current-events__image">
+                <img src="./images/current-events/1.jpg" alt="Image">
+              </div>
+              <div class="item-current-events__content content-item">
+                <div class="content-item__top">
+                  <div class="content-item__label label">ВИСТАВКА</div>
+                  <div class="content-item__date date">26.08-29.11.2019</div>
+                </div>
+                <h3 class="content-item__title">Йду і повертаюсь</h3>
+                <div class="content-item__text">
+                  <p>Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="box-current-events__item item-current-events">
+              <div class="item-current-events__image">
+                <img src="./images/current-events/2.jpg" alt="Image">
+              </div>
+              <div class="item-current-events__content content-item">
+                <div class="content-item__top">
+                  <div class="content-item__label label">ВИСТАВКА</div>
+                  <div class="content-item__date date">26.08-29.11.2019</div>
+                </div>
+                <h3 class="content-item__title">І спогади і мрії</h3>
+                <div class="content-item__text">
+                  <p>Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="current-events__item-big item-big-current">
+            <div class="item-big-current__image">
+              <img
+              class="item-big-current__photo"
+              src="./images/current-events/3.jpg" alt="Image"
+              >
+            </div>
+            <div class="item-big-current__content content-item-big">
+              <div class="content-item-big__top">
+                <div class="content-item-big__label label">ЛЕКЦІЯ</div>
+                <div class="content-item-big__date date">26/08/2019 - 11:00</div>
+              </div>
+              <h3 class="content-item-big__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </section>
+
+        <section class="page__section gallery" id="gallery">
+          <h2 class="gallery__title title">Галерея</h2>
+          <div class="gallery__box box-gallery">
+            <div class="box-gallery__item box-gallery__item--1">
+              <img src="./images/gallery/1.jpg" alt="Image-gallery">
+            </div>
+
+            <div class="box-gallery__item box-gallery__item--2tab">
+              <img src="./images/gallery/2-tab.jpg" alt="Image-gallery">
+            </div>
+
+            <div class="box-gallery__item box-gallery__item--2">
+              <img src="./images/gallery/2.jpg" alt="Image-gallery">
+            </div>
+
+            <div class="box-gallery__item box-gallery__item--3">
+              <img src="./images/gallery/3.jpg" alt="Image-gallery">
+            </div>
+
+            <div class="box-gallery__item box-gallery__item--4">
+              <img src="./images/gallery/4.jpg" alt="Image-gallery">
+            </div>
+          </div>
+          <div class="gallery__dots">
+            <img src="./images/gallery/dots.svg" alt="Dots">
+          </div>
+        </section>
+
+        <section class="page__section subscribe" id="subscribe">
+          <div class="subscribe__container">
+            <h2 class="subscribe__title">Підписка</h2>
+            <div class="subscribe__text">
+              <p>Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+
+            <form
+            onsubmit="this.reset(); return false;"
+            class="subscribe__form form"
+            action="#">
+              <input
+              name="email"
+              type="email"
+              placeholder="E-mail"
+              required
+              class="form-field subscribe__input"
+              >
+              <button
+              type="submit"
+              class="subscribe__button">
+              </button>
+            </form>
+
+          </div>
+
+        </section>
+
+      </div>
+
+    </main>
+
+    <footer class="footer">
+      <div class="footer__top top-footer">
+        <div class="top-footer__icons icons-footer">
+          <a href="#" class="icons-footer__logo">
+            <img src="./images/icon/logo.svg" alt="Logo">
+          </a>
+          <div class="icons-footer__social social">
+            <a
+            href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+            class="social__item"
+            target="_blank"
+            >
+              <img src="./images/icon/social/facebook.svg" alt="Facebook">
+            </a>
+            <a
+            href="https://www.instagram.com/namu.museum/"
+            class="social__item"
+            target="_blank"
+            >
+              <img src="./images/icon/social/instagram.svg" alt="Instagram">
+            </a>
+          </div>
+        </div>
+
+        <div class="top-footer__container">
+          <div class="top-footer__contacts contacts-footer" id="contacts">
+            <div class="contacts-footer__container">
+              <div class="contacts-footer__hours footer-hours">
+                <div class="footer-hours__title">Графік роботи</div>
+                <div class="footer-hours__hours footer-hours">
+                  <div class="footer-hours__opened">
+                    <span>12:00 — 20:00 </span>середа <br> <span>12:00 — 20:00</span> четвер <br> <span>12:00 — 20:00</span> п’ятниця <br> <span>11:00 — 19:00</span> субота <br> <span>11:00 — 19:00</span> неділя
+                  </div>
+                  <div class="footer-hours__closed">
+                    <span>Вихідні</span>: понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+                  </div>
+                </div>
+              </div>
+              <div class="contacts-footer__communications communications-footer">
+                <div class="communications-footer__title">Контакти:</div>
+                <a
+                target="_blank"
+                href="https://goo.gl/maps/uJB9TLuXCbhT26CLA"
+                class="communications-footer__item communications-footer__address">
+                вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="tel:+38 (044) 278-13-57" class="communications-footer__item communications-footer__phone">тел. +38 (044) 278-13-57</a>
+                <a href="tel:+38 (044) 278-74-54" class="communications-footer__item communications-footer__fax">факс +38 (044) 278-74-54</a>
+                <a href="mailto:info@namu.kiev.ua" class="communications-footer__item communications-footer__mail">e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+            <div class="contacts-footer__arrow-top">
+              <a href="#" class="contacts-footer__arrow-link"></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="top-footer__menu menu-footer">
+          <nav class="menu-footer__nav nav-footer">
+            <ul class="nav-footer__list">
+              <div class="nav-footer__list--part1">
+                <li class="nav-footer__item">
+                  <a href="#gallery" class="nav-footer__link">Галерея</a>
+                </li>
+                <li class="nav-footer__item">
+                  <a href="#current-events" class="nav-footer__link">Виставки та події</a>
+                </li>
+              </div>
+              <div class="nav-footer__list--part2">
+                <li class="nav-footer__item">
+                  <a href="#subscribe" class="nav-footer__link">Про Нас</a>
+                </li>
+                <li class="nav-footer__item">
+                  <a href="#contacts" class="nav-footer__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+        </div>
+
+      </div>
+
+      <div class="footer__bottom bottom-footer">
+        <div class="bottom-footer__copy">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+        <div class="bottom-footer__designed">
+          Designed by Zhyriada Marina
+        </div>
+      </div>
+
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
