fix a problem with a padings, footer and bcgimg

--- a/src/index.html
+++ b/src/index.html
@@ -351,48 +351,48 @@
             </a>
           </div>
         </div>
-        <div class="menu__timetable">
-          <div class="menu__subtitle">
+        <div class="footer__timetable">
+          <div class="footer__subtitle">
             Графік роботи
           </div>
-          <div class="menu__schedule">
+          <div class="footer__schedule">
             <p class="menu__schedule--time">
               12:00 - 20:00
-              <span class="menu__schedule--day">
+              <span class="footer__schedule--day">
                 середа
               </span>
             </p>
 
-            <p class="menu__schedule--time">
+            <p class="footer__schedule--time">
               12:00 - 20:00
-              <span class="menu__schedule--day">
+              <span class="footer__schedule--day">
                 четвер
               </span>
             </p>
 
-            <p class="menu__schedule--time">
+            <p class="footer__schedule--time">
               12:00 - 20:00
-              <span class="menu__schedule--day">
+              <span class="footer__schedule--day">
                 п'ятниця
               </span>
             </p>
 
-            <p class="menu__schedule--time">
+            <p class="footer__schedule--time">
               11:00 - 19:00
-              <span class="menu__schedule--day">
+              <span class="footer__schedule--day">
                 субота
               </span>
             </p>
 
-            <p class="menu__schedule--time">
+            <p class="footer__schedule--time">
               11:00 - 19:00
-              <span class="menu__schedule--day">
+              <span class="footer__schedule--day">
                 неділя
               </span>
             </p>
 
-            <p class="menu__schedule--weekend">
-              <span class="menu__schedule--time">
+            <p class="footer__schedule--weekend">
+              <span class="footer__schedule--time">
                 Вихідні:
               </span>
               понеділок, вівторок.<br> Каса припиняє роботу за 1 годину до закриття музею
