Do not check - I have not finished the slider yet

--- a/src/index.html
+++ b/src/index.html
@@ -181,42 +181,54 @@
 
       <section id="gallery" class="gallery">
         <h2 class="gallery__title page__title">Галерея</h2>
-        <div class="gallery__grid">
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="./images/gallery/gallery_1.jpg"
+                alt="folk costume"
+                class="gallery__image"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/gallery/gallery_2.jpg"
+                alt="Ukrainian house"
+                class="gallery__image"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/gallery/gallery_3.jpg"
+                alt="garden"
+                class="gallery__image"
+              >
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./images/gallery/gallery_4.jpg"
+                alt="sea"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+        <!-- <div class="gallery__grid">
           <div class="gallery__wrapper gallery__wrapper--4">
-            <img
-              src="./images/gallery/gallery_1.jpg"
-              alt="folk costume"
-              class="gallery__image"
-            >
           </div>
 
           <div class="gallery__wrapper gallery__wrapper--8">
-            <img
-              src="./images/gallery/gallery_2.jpg"
-              alt="Ukrainian house"
-              class="gallery__image"
-            >
           </div>
 
-          <div class="gallery__wrapper gallery__wrapper--8  gallery__wrapper--row--2">
-            <img
-              src="./images/gallery/gallery_3.jpg"
-              alt="
-              garden"
-              class="gallery__image"
-            >
+          <div class="gallery__wrapper gallery__wrapper--8 gallery__wrapper--row--2">
           </div>
 
-          <div class="gallery__wrapper gallery__wrapper--4  gallery__wrapper--row--2">
-            <img
-              src="./images/gallery/gallery_4.jpg"
-              alt="sea"
-              class="gallery__image"
-            >
+          <div class="gallery__wrapper gallery__wrapper--4 gallery__wrapper--row--2">
           </div>
 
         </div>
-        <div class="gallery__slider"></div>
+        <div class="gallery__slider"></div> -->
       </section>
 
       <section id="subscription" class="subscription">
