fix header__title, logo center, section__title and add slider for events

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,13 @@
               </a>
             </div>
           </div>
+
+          <a
+            href="#events"
+            class="header__events"
+          >
+          ПОДІЇ
+          </a>
         </div>
       </header>
 
@@ -138,7 +145,9 @@
 
       <main class="main" id="main">
         <section class="events" id="events">
-          <h2 class="section__title">
+          <h2
+            class="section__title
+            section__title--left">
             Актуальні події
           </h2>
           <article class="events__content">
