made contact links clickable,made photos on background on full width,added cursor pointer,fixed title NAMU

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMY</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link
       rel="icon"
@@ -575,12 +575,29 @@
           >
             <p class="footer__text">Контакти:</p>
             <br>
-            <ul class="footer__contacts footer__text">
-              <li>вул. М. Грушевського, 6;</li> 
-              <li>Київ, 01001</li>
-              <li>тел. +38 (044) 278-13-57</li>
-              <li>факс +38 (044) 278-74-54</li>
-              <li>e-mail: info@namu.kiev.ua</li>
+            <ul class="footer__contacts">
+              <li class="footer__contacts-item">
+                <a href="https://goo.gl/maps/hMTiMdUgK9kp8bka6" class="footer__text">
+                  вул. М. Грушевського, 6;
+                  <br>
+                  Київ, 01001
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a href="tel:+38 (044) 278-13-57" class="footer__text">
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a href="tel:+38 (044) 278-74-54" class="footer__text">
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a href="mailto:info@namu.kyiv.ua" class="footer__text">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
             </ul>
           </div>
 
