--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
   <body class="page__body">
     <header class="page__section header">
       <div class="header__top top-header">
+        <a href="#" class="top-header__logo">
+          <img src="./images/icon/logo.svg" alt="Logo">
+        </a>
         <div class="top-header__icons">
           <a href="#menu" class="top-header__icon"></a>
-          <div class="top-header__logo">
-            <img src="./images/icon/logo.svg" alt="Logo">
-          </div>
         </div>
       </div>
       <div class="header__content content-header">
@@ -39,40 +39,41 @@
 
     <aside class="page__menu menu" id="menu">
       <div class="menu__wrapper">
-        <div class="menu__navigation">
-
-          <div class="menu__opened menu-opened">
-            <a href="#" class="menu__icon icon--cross"></a>
-            <nav class="menu-opened__nav nav">
-              <ul class="nav__list">
-                <div class="nav__list--part">
-                  <li class="nav__item">
-                    <a href="#gallery" class="nav__link">Галерея</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#current-events" class="nav__link">Виставки та <br> події</a>
-                  </li>
-                </div>
-                <div class="nav__list--part">
-                  <li class="nav__item">
-                    <a href="#subscribe" class="nav__link">Про Нас</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="#contacts" class="nav__link">Контакти</a>
-                  </li>
-                </div>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <div class="menu__hours menu-hours">
-          <div class="menu-hours__title">Графік роботи</div>
-          <div class="menu-hours__hours hours">
-            <div class="hours__opened">
-              <span>12:00 — 20:00 </span>середа <br> <span>12:00 — 20:00</span> четвер <br> <span>12:00 — 20:00</span> п’ятниця <br> <span>11:00 — 19:00</span> субота <br> <span>11:00 — 19:00</span> неділя
+        <div class="menu__container">
+          <div class="menu__navigation">
+            <div class="menu__opened menu-opened">
+              <a href="#" class="menu__icon icon--cross"></a>
+              <nav class="menu-opened__nav nav">
+                <ul class="nav__list">
+                  <div class="nav__list--part">
+                    <li class="nav__item">
+                      <a href="#gallery" class="nav__link">Галерея</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#current-events" class="nav__link">Виставки та <br> події</a>
+                    </li>
+                  </div>
+                  <div class="nav__list--part">
+                    <li class="nav__item">
+                      <a href="#subscribe" class="nav__link">Про Нас</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#contacts" class="nav__link">Контакти</a>
+                    </li>
+                  </div>
+                </ul>
+              </nav>
             </div>
-            <div class="hours__closed">
-              <span>Вихідні</span>: понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+          <div class="menu__hours menu-hours">
+            <div class="menu-hours__title">Графік роботи</div>
+            <div class="menu-hours__hours hours">
+              <div class="hours__opened">
+                <span>12:00 — 20:00 </span>середа <br> <span>12:00 — 20:00</span> четвер <br> <span>12:00 — 20:00</span> п’ятниця <br> <span>11:00 — 19:00</span> субота <br> <span>11:00 — 19:00</span> неділя
+              </div>
+              <div class="hours__closed">
+                <span>Вихідні</span>: понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+              </div>
             </div>
           </div>
         </div>
@@ -82,49 +83,44 @@
     <main class="main-page">
       <div class="main-page__content">
         <section class="page__section current-events" id="current-events">
-          <h2 class="current-events__title title">Актуальні події</h2>
+
 
           <div class="current-events__box box-current-events">
-            <div class="box-current-events__item item-current-events">
-              <div class="item-current-events__image">
-                <img src="./images/current-events/1.jpg" alt="Image">
-              </div>
-              <div class="item-current-events__content content-item">
-                <div class="content-item__top">
-                  <div class="content-item__label label">ВИСТАВКА</div>
-                  <div class="content-item__date date">26.08-29.11.2019</div>
+            <h2 class="box-current-events__title title">Актуальні події</h2>
+            <div class="box-current-events__container">
+              <div class="box-current-events__item item-current-events">
+                <div class="item-current-events__image">
+                  <img src="./images/current-events/1.jpg" alt="Image">
                 </div>
-                <h3 class="content-item__title">Йду і повертаюсь</h3>
-                <div class="content-item__text">
-                  <p>Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+                <div class="item-current-events__content content-item">
+                  <div class="content-item__top">
+                    <div class="content-item__label label">ВИСТАВКА</div>
+                    <div class="content-item__date date">26.08-29.11.2019</div>
+                  </div>
+                  <h3 class="content-item__title">Йду і повертаюсь</h3>
+                  <div class="content-item__text">
+                    <p>Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-
-            <div class="box-current-events__item item-current-events">
-              <div class="item-current-events__image">
-                <img src="./images/current-events/2.jpg" alt="Image">
-              </div>
-              <div class="item-current-events__content content-item">
-                <div class="content-item__top">
-                  <div class="content-item__label label">ВИСТАВКА</div>
-                  <div class="content-item__date date">26.08-29.11.2019</div>
+              <div class="box-current-events__item item-current-events">
+                <div class="item-current-events__image">
+                  <img src="./images/current-events/2.jpg" alt="Image">
                 </div>
-                <h3 class="content-item__title">І спогади і мрії</h3>
-                <div class="content-item__text">
-                  <p>Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+                <div class="item-current-events__content content-item">
+                  <div class="content-item__top">
+                    <div class="content-item__label label">ВИСТАВКА</div>
+                    <div class="content-item__date date">26.08-29.11.2019</div>
+                  </div>
+                  <h3 class="content-item__title">І спогади і мрії</h3>
+                  <div class="content-item__text">
+                    <p>Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="current-events__item-big item-big-current">
-            <div class="item-big-current__image">
-              <img
-              class="item-big-current__photo"
-              src="./images/current-events/3.jpg" alt="Image"
-              >
-            </div>
             <div class="item-big-current__content content-item-big">
               <div class="content-item-big__top">
                 <div class="content-item-big__label label">ЛЕКЦІЯ</div>
@@ -133,6 +129,7 @@
               <h3 class="content-item-big__title">Від класицизму до романтизму</h3>
             </div>
           </div>
+
         </section>
 
         <section class="page__section gallery" id="gallery">
@@ -141,23 +138,20 @@
             <div class="box-gallery__item box-gallery__item--1">
               <img src="./images/gallery/1.jpg" alt="Image-gallery">
             </div>
-
             <div class="box-gallery__item box-gallery__item--2tab">
               <img src="./images/gallery/2-tab.jpg" alt="Image-gallery">
             </div>
-
             <div class="box-gallery__item box-gallery__item--2">
               <img src="./images/gallery/2.jpg" alt="Image-gallery">
             </div>
-
             <div class="box-gallery__item box-gallery__item--3">
               <img src="./images/gallery/3.jpg" alt="Image-gallery">
             </div>
-
             <div class="box-gallery__item box-gallery__item--4">
               <img src="./images/gallery/4.jpg" alt="Image-gallery">
             </div>
           </div>
+
           <div class="gallery__dots">
             <img src="./images/gallery/dots.svg" alt="Dots">
           </div>
