--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <h1 class="header__title">ХУДОЖНІЙ  МУЗЕЙ</h1>
         <div class="header_ticket">
           <span class="header__inskription">КВИТКИ</span>
-          <a class="header__button" href="#">
+          <a class="header__button" href="#footer">
           </a>
         </div>
       </section>
