--- a/src/index.html
+++ b/src/index.html
@@ -19,71 +19,69 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
-    <script src="scripts/main.js"></script>
     <script>
       'use strict';
 
-let slideIndex = 1;
+      let slideIndex = 1;
 
-currentSlide(slideIndex);
+      currentSlide(slideIndex);
 
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
+      function currentSlide(n) {
+        showSlides(slideIndex = n);
+      }
 
-function showSlides(n) {
-  let i;
-  const windowSize = window.screen.width;
-  const slide = document.getElementsByClassName('slides__wrapper');
-  const dots = document.getElementsByClassName('slides__dot');
+      function showSlides(n) {
+        let i;
+        const windowSize = window.screen.width;
+        const slide = document.getElementsByClassName('slides__wrapper');
+        const dots = document.getElementsByClassName('slides__dot');
 
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(' active', '');
-  }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(' active', '');
+        }
 
-  if (windowSize < 768) {
-    if (n === 1) {
-      slide[0].style.left = '0';
-      dots[0].className += ' active';
-    }
+        if (windowSize < 768) {
+          if (n === 1) {
+            slide[0].style.left = '0';
+            dots[0].className += ' active';
+          }
 
-    if (n === 2) {
-      slide[0].style.left = '-296px';
-      dots[1].className += ' active';
-    }
+          if (n === 2) {
+            slide[0].style.left = '-296px';
+            dots[1].className += ' active';
+          }
 
-    if (n === 3) {
-      slide[0].style.left = '-592px';
-      dots[2].className += ' active';
-    }
+          if (n === 3) {
+            slide[0].style.left = '-592px';
+            dots[2].className += ' active';
+          }
 
-    if (n === 4) {
-      slide[0].style.left = '-888px';
-      dots[3].className += ' active';
-    }
-  } else if (windowSize < 1280) {
-    if (n === 1) {
-      slide[0].style.left = '0';
-      dots[0].className += ' active';
-    }
+          if (n === 4) {
+            slide[0].style.left = '-888px';
+            dots[3].className += ' active';
+          }
+        } else if (windowSize < 1280) {
+          if (n === 1) {
+            slide[0].style.left = '0';
+            dots[0].className += ' active';
+          }
 
-    if (n === 2) {
-      slide[0].style.left = '-356px';
-      dots[1].className += ' active';
-    }
+          if (n === 2) {
+            slide[0].style.left = '-356px';
+            dots[1].className += ' active';
+          }
 
-    if (n === 3) {
-      slide[0].style.left = '-712px';
-      dots[2].className += ' active';
-    }
+          if (n === 3) {
+            slide[0].style.left = '-712px';
+            dots[2].className += ' active';
+          }
 
-    if (n === 4) {
-      slide[0].style.left = '-1068px';
-      dots[3].className += ' active';
-    }
-  }
-}
-
+          if (n === 4) {
+            slide[0].style.left = '-1068px';
+            dots[3].className += ' active';
+          }
+        }
+      }
     </script>
 
     <header class="header">
@@ -93,9 +91,8 @@ function showSlides(n) {
         </a>
 
         <a
-        href="https://namu.ua/"
+        href="#"
         class="header__logo"
-        target="_blank"
         >
           <img
           src="images/logo.svg"
@@ -134,61 +131,58 @@ function showSlides(n) {
     </header>
 
     <aside class="page__menu menu" id="menu">
-      <div class="menu__content">
-        <a href="#" class="menu__bottom-icon icon icon__menu-close">
-          <img src="images/menu-close.svg" alt="NAMU menu">
-        </a>
-        <nav class="nav menu__nav">
-          <ul class="nav__list">
-            <li class="nav__item nav__item--1">
-              <a href="#gallery" class="nav__link">Галерея</a>
-            </li>
-
-            <li class="nav__item nav__item--2">
-              <a href="#events" class="nav__link">
-              Виставки та
-                <br>події
-              </a>
-            </li>
-
-            <li class="nav__item nav__item--3">
-              <a href="#subscribe" class="nav__link">Про Нас</a>
-            </li>
-
-            <li class="nav__item nav__item--4">
-              <a href="#footer" class="nav__link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="menu__bottom schedule">
-        <div class="schedule__wrapper">
-          <h2 class="schedule__title">Графік роботи</h2>
-          <ul class="schedule__top menu__bottom-schedule">
-            <li class="schedule__entry">
-              <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> середа</p>
-            </li>
-            <li class="schedule__entry">
-              <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> четвер</p>
-            </li>
-            <li class="schedule__entry">
-              <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> п’ятниця</p>
-            </li>
-            <li class="schedule__entry">
-              <p class="schedule__time-date"><span class="schedule__time">11:00 — 19:00</span> субота</p>
-            </li>
-            <li class="schedule__entry">
-              <p class="schedule__time-date"><span class="schedule__time">11:00 — 19:00</span> неділя</p>
-            </li>
-          </ul>
+      <div class="menu__wrapper">
+        <div class="menu__content">
+          <a href="#" class="menu__bottom-icon icon icon__menu-close">
+            <img src="images/menu-close.svg" alt="NAMU menu">
+          </a>
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item nav__item--1">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item nav__item--2">
+                <a href="#events" class="nav__link">
+                Виставки та
+                  <br>події
+                </a>
+              </li>
+              <li class="nav__item nav__item--3">
+                <a href="#subscribe" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item nav__item--4">
+                <a href="#footer" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-
-        <p class="schedule__info menu__bottom-info">
-          <span class="schedule__info--bold">Вихідні</span>: понеділок, вівторок
-          <br>Каса припиняє роботу за 1 годину
-          до закриття музею
-        </p>
+        <div class="menu__bottom schedule">
+          <div class="schedule__wrapper">
+            <h2 class="schedule__title">Графік роботи</h2>
+            <ul class="schedule__top menu__bottom-schedule">
+              <li class="schedule__entry">
+                <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> середа</p>
+              </li>
+              <li class="schedule__entry">
+                <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> четвер</p>
+              </li>
+              <li class="schedule__entry">
+                <p class="schedule__time-date"><span class="schedule__time">12:00 — 20:00</span> п’ятниця</p>
+              </li>
+              <li class="schedule__entry">
+                <p class="schedule__time-date"><span class="schedule__time">11:00 — 19:00</span> субота</p>
+              </li>
+              <li class="schedule__entry">
+                <p class="schedule__time-date"><span class="schedule__time">11:00 — 19:00</span> неділя</p>
+              </li>
+            </ul>
+          </div>
+          <p class="schedule__info menu__bottom-info">
+            <span class="schedule__info--bold">Вихідні</span>: понеділок, вівторок
+            <br>Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
       </div>
 
       <div class="menu__background-opacity"></div>
@@ -338,7 +332,11 @@ function showSlides(n) {
             >
 
             <div class="subscribe__button-link">
-              <img src="images/button-arrow__black.svg" alt="button-arrow">
+              <img
+              src="images/button-arrow__black.svg"
+              alt="button-arrow"
+              class="subscribe__button-arrow"
+              >
             </div>
           </label>
         </form>
@@ -421,7 +419,6 @@ function showSlides(n) {
           <a
           href="tel:+380442781357"
           class="footer__link"
-          target="_blank"
           >
           тел. +38 (044) 278-13-57
 
@@ -432,7 +429,6 @@ function showSlides(n) {
           <a
           href="tel:+380442787454"
           class="footer__link"
-          target="_blank"
           >
           факс +38 (044) 278-74-54
 
