fixed header block

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
   <body class="page__body">
     <header class="header" id="home">
+      <div class="header__background"></div>
       <div class="container">
         <div class="header__container">
           <div class="header__top-bar">
@@ -44,27 +45,23 @@
                 </defs>
               </svg>
             </a>
+
+            <a class="header__logo-link logo-link" href="#">
+              <p class="logo-link--left">na</p>
+              <p class="logo-link--right">mu</p>
+            </a>
           </div>
 
-          <a class="header__logo-link logo-link" href="#">
-            <p class="logo-link--left">na</p>
-            <p class="logo-link--right">mu</p>
-          </a>
-
           <div class="header__content">
-            <div class="header__background"></div>
+            <h1 class="header__title">
+              ХУДОЖНІЙ <br> МУЗЕЙ
+            </h1>
 
-            <div class="header__text">
-              <h1 class="header__title">
-                ХУДОЖНІЙ МУЗЕЙ
-              </h1>
+            <a href="#events" class="button">
+              <p class="button__link">квитки</p>
+            </a>
 
-              <a href="#events" class="button">
-                <p class="button__link">квитки</p>
-              </a>
-
-              <div class="marker">події</div>
-            </div>
+            <a class="marker" href="#events">події</a>
           </div>
         </div>
       </div>
