--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
   <link rel="icon" href="images/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?
+family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?
+family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.scss">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
 </head>
@@ -79,7 +80,11 @@
     <a href="#menu" class="header__menu page__icon"></a>
 
     <a href="#" class="header__logo">
-      <img src="./images/icons/namu-logo.svg" alt="namu logo" class="header__img">
+      <img
+        src="./images/icons/namu-logo.svg"
+        alt="namu logo"
+        class="header__img"
+      >
     </a>
   </header>
 
@@ -87,62 +92,76 @@
 
   <main class="page__main">
     <section id="museum" class="museum">
-      <div class="museum__top">
-      </div>
-
-      <div class="museum__bottom">
-        <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <a href="#" class="tickets museum__tickets">
-          <p class="tickets__text">
-            Квитки
-          </p>
-          <div class="tickets__arrow">
-            <img src="./images/icons/arrow.svg" alt="arrow" class="tickets__image">
-          </div>
-        </a>
+      <div class="container">
+        <div class="museum__bottom">
+          <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#" class="tickets museum__tickets">
+            <p class="tickets__text">
+              Квитки
+            </p>
+            <div class="tickets__arrow">
+              <img src="./images/icons/arrow.svg" alt="arrow" class="tickets__image">
+            </div>
+          </a>
+        </div>
       </div>
     </section>
 
     <section id="events" class="events page__events">
-      <h2 class="events__title page__title">Актуальні події</h2>
-      <article class="article events__article">
-        <img src="./images/images/event_1.jpg" alt="image" class="article__image">
+      <div class="container">
+        <h2 class="events__title page__title">Актуальні події</h2>
+        <article class="article events__article">
+          <img src="./images/images/event_1.jpg" alt="image" class="article__image">
 
-        <div class="article__wrap">
-          <div class="article__date">
-            <p>ВИСТАВКА</p>
-            <p class="article__dating">26.08-29.11.2019</p>
+          <div class="article__wrap">
+            <div class="article__date">
+              <p>ВИСТАВКА</p>
+              <p class="article__dating">26.08-29.11.2019</p>
+            </div>
+            <a href="#" class="article__title">Йду і повертаюсь</a>
+            <p class="article__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку -
+              українське мистецтво другої половини 1980&nbsp;-1995 років.
+            </p>
           </div>
-          <a href="#" class="article__title">Йду і повертаюсь</a>
-          <p class="article__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку -
-            українське мистецтво другої половини 1980&nbsp;-1995 років.</p>
-        </div>
-      </article>
+        </article>
 
-      <article class="article events__article">
-        <img src="./images/images/event_2.jpg" alt="image" class="article__image">
+        <article class="article events__article">
+          <img src="./images/images/event_2.jpg" alt="image" class="article__image">
 
-        <div class="article__wrap">
-          <div class="article__date">
-            <p>ВИСТАВКА</p>
-            <p class="article__dating">26.08-29.11.2019</p>
+          <div class="article__wrap">
+            <div class="article__date">
+              <p>ВИСТАВКА</p>
+              <p class="article__dating">26.08-29.11.2019</p>
+            </div>
+            <a href="#" class="article__title">І спогади і мрії</a>
+            <p class="article__text">
+              Національний художній музей України до 100 річчя від дня народження видатної
+              української художниці Тетяни Яблонської відкриває ретроспективну ювілейну
+              виставку «І спогади і мрії».
+            </p>
           </div>
-          <a href="#" class="article__title">І спогади і мрії</a>
-          <p class="article__text">Національний художній музей України до 100 річчя від дня народження видатної
-            української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
-        </div>
-      </article>
+        </article>
+      </div>
+
     </section>
 
     <section id="romantic" class="romantic">
-      <img srcset="./images/images/event_3-desktop.jpg  1024w,
-            ./images/images/event_3.jpg 640w" src="./images/images/event_3.jpg" alt="image" class="romantic__image" />
-      <div class="romantic__wrap">
-        <div class="romantic__date">
-          <p>ЛЕКЦІЯ</p>
-          <p class="romantic__dating">26/08/2019 - 11:00</p>
+      <img
+        srcset="./images/images/event_3-desktop.jpg 1024w,
+        ./images/images/event_3.jpg 640w"
+        src="./images/images/event_3.jpg"
+        alt="image"
+        class="romantic__image"
+      />
+      <div class="container">
+        <div class="romantic__wrap">
+          <div class="romantic__date">
+            <p>ЛЕКЦІЯ</p>
+            <p class="romantic__dating">26/08/2019 - 11:00</p>
+          </div>
+          <a href="#" class="romantic__title">Від класицизму до романтизму</a>
         </div>
-        <a href="#" class="romantic__title">Від класицизму до романтизму</a>
       </div>
     </section>
 
@@ -192,107 +211,128 @@
     </section>
 
     <section id="subscription" class="subscription">
-      <h2 class="page__title subscription__title">Підписка</h2>
-      <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
-      <form action="" class="form subscription__email">
-        <div class="form__text">
-          <input type="email" name="email" placeholder="E-mail" class="form__input" required>
-        </div>
-        <button class="form__arrow" type="submit">
-          <img src="./images/icons/arrow-black.svg" alt="arrow" class="form__image">
-        </button>
-      </form>
+      <div class="container">
+        <h2 class="page__title subscription__title">Підписка</h2>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form action="" class="form subscription__email">
+          <div class="form__text">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="form__input"
+              required
+            >
+          </div>
+          <button class="form__arrow" type="submit">
+            <img
+              src="./images/icons/arrow-black.svg"
+              alt="arrow"
+              class="form__image"
+            >
+          </button>
+        </form>
+      </div>
     </section>
 
     <section id="contacts" class="contacts">
-      <div class="contacts__top">
-        <a href="#">
-          <img src="./images/icons/logo-contact.svg" alt="logo" class="contacts__logo">
-        </a>
-        <div class="contacts__social">
-          <a href="https://www.facebook.com/namu.museum" target="_blank">
-            <img src="./images/icons/facebook.svg" alt="facebook">
+      <div class="container">
+        <div class="contacts__top">
+          <a href="#">
+            <img
+              src="./images/icons/logo-contact.svg"
+              alt="logo"
+              class="contacts__logo"
+            >
           </a>
-          <a href="https://www.instagram.com/namu.museum/" target="_blank">
-            <img src="./images/icons/instagram.svg" alt="instagram">
-          </a>
-        </div>
-      </div>
-
-      <div class="contacts__wrapper">
-        <div class="contacts__grafic grafic">
-          <p class="grafic__title">
-            Графік роботи
-          </p>
-
-          <div class="grafic__week grafic__week--contacts">
-            <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
-            <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
-            <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
-            <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
-            <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
+          <div class="contacts__social">
+            <a href="https://www.facebook.com/namu.museum" target="_blank">
+              <img src="./images/icons/facebook.svg" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+              <img src="./images/icons/instagram.svg" alt="instagram">
+            </a>
           </div>
+        </div>
 
-          <div class="grafic__kasa">
-            <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
-              <br>Каса припиняє роботу за 1 годину до закриття музею
+        <div class="contacts__wrapper">
+          <div class="contacts__grafic grafic">
+            <p class="grafic__title">
+              Графік роботи
             </p>
+
+            <div class="grafic__week grafic__week--contacts">
+              <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
+              <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
+              <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
+              <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
+              <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
+            </div>
+
+            <div class="grafic__kasa">
+              <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
+                <br>Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
           </div>
+
+          <div class="contacts__contact">
+            <p class="contacts__text">
+              Контакти:
+            </p>
+            <a
+              href="https://goo.gl/maps/op682XHSmBEYuNpn7"
+              class="contacts__adress"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            </br>
+            <span class="contacts__adress">тел. </span>
+            <a href="tel:+380442781357" class="contacts__adress">
+              +38 (044) <span class="contacts--nowrap">278-13-57</span>
+            </a>
+            </br>
+            <span class="contacts__adress">факс</span>
+            <a href="tel:+380442781357" class="contacts__adress">
+              +38 (044) <span class="contacts--nowrap">278-13-57</span>
+            </a>
+            </br>
+            <span class="contacts__adress">e-mail:</span>
+            <a href="mailto: info@namu.kiev.ua" class="contacts__adress">
+              info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a href="#header" class="contacts__arrow">
+          </a>
         </div>
 
-        <div class="contacts__contact">
-          <p class="contacts__text">
-            Контакти:
-          </p>
-          <a href="https://goo.gl/maps/op682XHSmBEYuNpn7" class="contacts__adress" target="_blank">
-            вул. М. Грушевського, 6; Київ, 01001
-          </a>
-          </br>
-          <span class="contacts__adress">тел. </span>
-          <a href="tel: +38 (044) 278-13-57" class="contacts__adress">
-            +38 (044) <span class="contacts--nowrap">278-13-57</span>
-          </a>
-          </br>
-          <span class="contacts__adress">факс</span>
-          <a href="tel: +38 (044) 278-13-57" class="contacts__adress">
-            +38 (044) <span class="contacts--nowrap">278-13-57</span>
-          </a>
-          </br>
-          <span class="contacts__adress">e-mail:</span>
-          <a href="mailto: info@namu.kiev.ua" class="contacts__adress">
-            info@namu.kiev.ua
-          </a>
+        <div class="contacts__menu">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a class="contacts__link" href="#gallery">
+                Галерея
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#subscription">
+                Про нас
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#events">
+                Виставки та події
+              </a>
+            </li>
+            <li class="contacts__item">
+              <a class="contacts__link" href="#contacts">
+                Контакти
+              </a>
+            </li>
+          </ul>
         </div>
-
-        <a href="#header" class="contacts__arrow">
-        </a>
       </div>
-
-      <div class="contacts__menu">
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <a class="contacts__link" href="#gallery">
-              Галерея
-            </a>
-          </li>
-          <li class="contacts__item">
-            <a class="contacts__link" href="#subscription">
-              Про нас
-            </a>
-          </li>
-          <li class="contacts__item">
-            <a class="contacts__link" href="#events">
-              Виставки та події
-            </a>
-          </li>
-          <li class="contacts__item">
-            <a class="contacts__link" href="#contacts">
-              Контакти
-            </a>
-          </li>
-        </ul>
-      </div>
-
     </section>
   </main>
 
