--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,10 @@
               >
             </a>
 
-            <a class="header__logo" href="/">
+            <a
+              class="header__logo"
+              href="/"
+              id="top">
               <img
                 class="logo"
                 src="/images/header/logo.png"
@@ -332,12 +335,12 @@
         </div>
 
         <div class="footer__scrol">
-          <div class="footer__scrol--circle">
+          <a class="footer__scrol--circle" href="#top">
             <img
               class="footer__arrow" 
               src="/images/footer/arrow-up.svg" 
               alt="arrow-up">
-          </div>
+          </a>
         </div>
 
         <div class="footer__line">
