--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
             <a
               class="header__logo"
-              href="/"
+              href="#"
               id="top">
               <img
                 class="logo"
@@ -256,7 +256,7 @@
       <div class="footer__content">
         <div class="footer__grop-icon">
           
-          <a class="footer__logo" href="/">
+          <a class="footer__logo" href="#">
             <img
               class="logo"
               src="/images/header/logo.png"
