--- a/src/index.html
+++ b/src/index.html
@@ -344,7 +344,7 @@
 
       <footer class="footer" id="footer">
         <div class="footer__icons">
-          <a href="https://namu.ua/" target="_blank">
+          <a href="#">
             <img
             src="images/logo-bot.svg"
             alt="NAMU logo"
