fix: address email link

--- a/src/index.html
+++ b/src/index.html
@@ -421,7 +421,7 @@
                     <span class="contacts__number">278-74-54</span>
                   </a>
 
-                  <a href="e-mail:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+                  <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
                 </address>
               </div>
             </section>
