changed mrnu shadow on full size, fixed form refresh, added hover effects in footer links

--- a/src/index.html
+++ b/src/index.html
@@ -422,7 +422,11 @@
             <p class="about-us__text-subscription">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <form action="#" class="form">
+            <form 
+              action=" "
+              class="form"
+              onsubmit="this.reset(); return false;"
+            >
               <input
                 type="email"
                 class="form__field"
@@ -577,7 +581,11 @@
             <br>
             <ul class="footer__contacts">
               <li class="footer__contacts-item">
-                <a href="https://goo.gl/maps/hMTiMdUgK9kp8bka6" class="footer__text">
+                <a 
+                  href="https://goo.gl/maps/hMTiMdUgK9kp8bka6"
+                  class="footer__text"
+                  target="_blank"
+                >
                   вул. М. Грушевського, 6;
                   <br>
                   Київ, 01001
