add smooth transition, change header, add autofill to form, change slider on tablet vertion

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
           <div class="menu__list">
             <a
-              href="#galery"
+              href="#gallery"
               class="menu__link"
             >
               Галерея
@@ -223,7 +223,7 @@
           </article>
         </section>
 
-        <section class="gallery" id="galery">
+        <section class="gallery" id="gallery">
           <h2 class="section__title">
             Галерея
           </h2>
@@ -315,13 +315,18 @@
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
           </div>
-          <form class="form" onsubmit="this.reset(); return false;">
+          <form
+            class="form"
+            method="get"
+            autocomplete="on"
+          >
             <input
               type="email"
               id="email"
               name="email"
               class="form__input"
               placeholder="E-mail"
+              required
             >
             <button
               type="submit"
@@ -350,12 +355,14 @@
             <a
                 href="https://www.facebook.com/namu.museum/"
                 class="icon icon--facebook"
+                target="_blank"
               >
             </a>
 
             <a
               href="https://www.instagram.com/namu.museum/"
               class="icon icon--instagram"
+              target="_blank"
             >
             </a>
           </div>
@@ -417,6 +424,7 @@
             <a
               href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494431,30.528179,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
               class="footer__roster--link"
+              target="_blank"
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
@@ -427,7 +435,7 @@
               тел.<br> +38 (044) 278-13-57
             </a>
             <a
-              href="fax:+380442784754"
+              href="tel:+380442784754"
               class="footer__roster--link"
             >
               факс<br> +38 (044) 278-74-54
