--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,6 @@
     <script>
       let slideIndex = 1;
 
-      currentSlide(slideIndex);
-
-      function currentSlide(n) {
-        showSlides(slideIndex = n);
-      }
-
       function showSlides(n) {
         let i;
         const windowSize = window.screen.width;
@@ -282,6 +276,12 @@
           </div>
 
           <div class="slides__nav">
+            <script>
+              function currentSlide(n) {
+                showSlides(slideIndex = n);
+              }
+            </script>
+
             <div class="slides__dot active" onclick="currentSlide(1)"></div>
 
             <div class="slides__dot" onclick="currentSlide(2)"></div>
@@ -499,5 +499,8 @@
         </div>
       </footer>
     </main>
+    <script>
+      currentSlide(slideIndex);
+    </script>
   </body>
 </html>
