NAMU landing fixed

--- a/src/index.html
+++ b/src/index.html
@@ -440,9 +440,6 @@
     </main>
 
     <script>
-      let slideIndex = 1;
-
-
       const slide1 = document.getElementById("currentSlide1");
       const slide2 = document.getElementById("currentSlide2");
       const slide3 = document.getElementById("currentSlide3");
@@ -458,13 +455,12 @@
       }
 
       function showSlides(n) {
-        let i;
         const windowSize = window.screen.width;
         const slide = document.getElementsByClassName('slides__wrapper');
         const dots = document.getElementsByClassName('slides__dot');
 
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(' active', '');
+        for (let i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace('active', '');
         }
 
         if (windowSize < 768) {
@@ -509,7 +505,7 @@
           }
         }
       }
-      currentSlide(slideIndex);
+
     </script>
   </body>
 </html>
