--- a/src/index.html
+++ b/src/index.html
@@ -299,38 +299,7 @@
         </div>
 
         <div class="gallery__swiper">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="102"
-            height="9"
-            viewBox="0 0 102 9"
-            fill="none"
-          >
-            <circle
-              cx="4.5"
-              cy="4.5"
-              r="4.5"
-              fill="$colorGreen"
-            >
-              <circle
-                cx="35.5"
-                cy="4.5"
-                r="4.5"
-                fill="#E0E0E0"
-              >
-                <circle
-                  cx="66.5"
-                  cy="4.5"
-                  r="4.5"
-                  fill="#E0E0E0"
-                >
-                  <circle
-                    cx="97.5"
-                    cy="4.5"
-                    r="4.5"
-                    fill="#E0E0E0"
-                  >
-          </svg>
+          <img src="./images/icon/swiper.svg" alt="swiper">
         </div>
       </div>
     </section>
