--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body class="page__body">
+    <div class="page__opasity"></div>
     <header class="header">
       <div class="header__image"></div>
       <div class="header__content">
@@ -240,9 +241,9 @@
                   required
                 >
 
-                <div class="bottom-section__form--vector">
+                <button class="bottom-section__form--vector">
                   <img src="/images/header/vector.png" alt="vector">
-                </div>
+                </button>
               </form>
               
             </div>
