add background for menu, fix a paddings, change form

--- a/src/index.html
+++ b/src/index.html
@@ -54,91 +54,89 @@
       </header>
 
       <aside class="menu" id="menu">
-        <div class="menu__inform">
-          <div class="menu__top">
-            <a
-              href="#header"
-              class="icon icon--close"
-            >
-            </a>
-          </div>
-
-          <div class="menu__list">
-            <a
-              href="#gallery"
-              class="menu__link"
-            >
-              Галерея
-            </a>
-            <a
-              href="#subscribe"
-              class="menu__link"
-            >
-              Про Нас
-            </a>
-            <a
-              href="#events"
-              class="menu__link"
-            >
-              Виставки та події
-            </a>
-            <a
-              href="#contacts"
-              class="menu__link"
-            >
-              Контакти
-            </a>
-          </div>
-        </div>
-
-        <div class="line line--menu"></div>
-
-        <div class="menu__timetable">
-          <div class="menu__column">
-            <div class="menu__subtitle">
-              Графік роботи
+        <div class="menu__content">
+          <div class="menu__inform">
+            <div class="menu__top">
+              <a
+                href="#header"
+                class="icon icon--close"
+              >
+              </a>
             </div>
-            <div class="menu__schedule">
-              <p class="menu__schedule--time">
-                12:00 - 20:00
-                <span class="menu__schedule--day">
-                  середа
-                </span>
-              </p>
-              <p class="menu__schedule--time">
-                12:00 - 20:00
-                <span class="menu__schedule--day">
-                  четвер
-                </span>
-              </p>
-              <p class="menu__schedule--time">
-                12:00 - 20:00
-                <span class="menu__schedule--day">
-                  п'ятниця
-                </span>
-              </p>
-              <p class="menu__schedule--time">
-                11:00 - 19:00
-                <span class="menu__schedule--day">
-                  субота
-                </span>
-              </p>
-              <p class="menu__schedule--time">
-                11:00 - 19:00
-                <span class="menu__schedule--day">
-                  неділя
-                </span>
-              </p>
+            <div class="menu__list">
+              <a
+                href="#gallery"
+                class="menu__link"
+              >
+                Галерея
+              </a>
+              <a
+                href="#subscribe"
+                class="menu__link"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#events"
+                class="menu__link"
+              >
+                Виставки та події
+              </a>
+              <a
+                href="#contacts"
+                class="menu__link"
+              >
+                Контакти
+              </a>
             </div>
           </div>
-
-          <div class="menu__weekend">
-            <p class="menu__schedule--weekend">
-              <span class="menu__schedule--time">
-                Вихідні:
-              </span>
-              понеділок, вівторок.<br> Каса припиняє роботу за 1 годину до закриття музею
-            </p>
+          <div class="line line--menu"></div>
+          <div class="menu__timetable">
+            <div class="menu__column">
+              <div class="menu__subtitle">
+                Графік роботи
+              </div>
+              <div class="menu__schedule">
+                <p class="menu__schedule--time">
+                  12:00 - 20:00
+                  <span class="menu__schedule--day">
+                    середа
+                  </span>
+                </p>
+                <p class="menu__schedule--time">
+                  12:00 - 20:00
+                  <span class="menu__schedule--day">
+                    четвер
+                  </span>
+                </p>
+                <p class="menu__schedule--time">
+                  12:00 - 20:00
+                  <span class="menu__schedule--day">
+                    п'ятниця
+                  </span>
+                </p>
+                <p class="menu__schedule--time">
+                  11:00 - 19:00
+                  <span class="menu__schedule--day">
+                    субота
+                  </span>
+                </p>
+                <p class="menu__schedule--time">
+                  11:00 - 19:00
+                  <span class="menu__schedule--day">
+                    неділя
+                  </span>
+                </p>
+              </div>
+            </div>
+            <div class="menu__weekend">
+              <p class="menu__schedule--weekend">
+                <span class="menu__schedule--time">
+                  Вихідні:
+                </span>
+                понеділок, вівторок.<br> Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
           </div>
         </div>
       </aside>
@@ -317,8 +315,9 @@
           </div>
           <form
             class="form"
-            method="get"
-            autocomplete="on"
+            onsubmit="this.reset(); return false;"
+            action="/submit-form"
+            method="post"
           >
             <input
               type="email"
